RESOLVED FIXED131976
WKThumbnailView doesn't quite work with topContentInset
https://bugs.webkit.org/show_bug.cgi?id=131976
Summary WKThumbnailView doesn't quite work with topContentInset
Tim Horton
Reported 2014-04-22 01:47:12 PDT
Attachments
patch (4.37 KB, patch)
2014-04-22 01:48 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2014-04-22 01:48:31 PDT
Darin Adler
Comment 2 2014-04-22 07:45:04 PDT
Comment on attachment 229871 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=229871&action=review > Source/WebKit2/UIProcess/API/Cocoa/_WKThumbnailView.mm:90 > + _lastSnapshotScale = 0; Could consider NaN instead for uses like this. > Source/WebKit2/UIProcess/API/Cocoa/_WKThumbnailView.mm:126 > - IntRect snapshotRect(IntPoint(), _webPageProxy->viewSize()); > + IntRect snapshotRect(IntPoint(), IntSize(_webPageProxy->viewSize().width(), _webPageProxy->viewSize().height() - _webPageProxy->topContentInset())); Is there a way to write this math simpler? Like maybe this: IntRect snapshotRect(IntPoint(), _webPageProxy->viewSize() - IntSize(0, _webPageProxy->topContentInset()));
Tim Horton
Comment 3 2014-04-22 08:37:51 PDT
(In reply to comment #2) > (From update of attachment 229871 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=229871&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/_WKThumbnailView.mm:90 > > + _lastSnapshotScale = 0; > > Could consider NaN instead for uses like this. I had really never considered using NaN for a comparison-that-always-fails case like this. That's neat. > > Source/WebKit2/UIProcess/API/Cocoa/_WKThumbnailView.mm:126 > > - IntRect snapshotRect(IntPoint(), _webPageProxy->viewSize()); > > + IntRect snapshotRect(IntPoint(), IntSize(_webPageProxy->viewSize().width(), _webPageProxy->viewSize().height() - _webPageProxy->topContentInset())); > > Is there a way to write this math simpler? Like maybe this: > > IntRect snapshotRect(IntPoint(), _webPageProxy->viewSize() - IntSize(0, _webPageProxy->topContentInset())); Sure. Thanks, Darin!
Tim Horton
Comment 4 2014-04-22 08:52:29 PDT
Note You need to log in before you can comment on or make changes to this bug.